--- a/funcprog-haskell.cabal
+++ b/funcprog-haskell.cabal
@@ -32,13 +32,13 @@ extra-source-files:  ChangeLog.md, README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >= 1.10
 
--- library
-  -- exposed-modules: Main
-  -- other-modules:
-  -- other-extensions:
-  -- build-depends:       base >=4.11 && <4.12
-  -- hs-source-dirs:      app/src
-  -- default-language:    Haskell2010
+library
+  exposed-modules: MainLib
+  other-modules:
+  other-extensions:
+  build-depends:       base >=4.11 && <4.12
+  hs-source-dirs:      app/src
+  default-language:    Haskell2010
 
 executable funcprog
   main-is:             Main.hs
@@ -52,7 +52,9 @@ executable funcprog
 test-suite tests
   type:             exitcode-stdio-1.0
   main-is:          MainTest.hs
-  hs-source-dirs:   app/test
+  other-modules:    MainLib
+
+  hs-source-dirs:   app/src app/test
   default-language: Haskell2010
   cpp-options:      -DTEST
   ghc-options:
